Added tasks management
